# osm-edit-mcp

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  LICENSE  POLISH_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SECURITY.md  TESTING_CHECKLIST.md  TEST_RESULTS_SUMMARY.md  claude_desktop_config.json  cursor_troubleshoot.md  debug_cursor_connection.py  debug_mcp_cursor.py  demo_natural_language.py  demo_tools.py  deploy.sh  docker-compose.yml  examples.md  explain_mcp_server.py  interactive_example.py  main.py  nginx.conf  oauth_auth.py  pyproject.toml  quick_test.py  requirements.txt  run_mcp.sh  setup.py  status_check.py  test_belgrade_location.py  test_comprehensive.py  test_mcp_protocol.py  (+6 more)
.claude/: settings.local.json
.cursor/rules/: configuration-management.mdc  mcp-development.mdc  mcp-implementation-patterns.mdc  osm-development-safety.mdc  osm-edit-safety.mdc  osm-mcp-project-structure.mdc  testing-and-quality.mdc
.github/workflows/: ci.yml  release.yml
data/: osm_tag_standards.json
deployment/: osm-edit-mcp.service
docs/: MCP_CLIENT_SETUP.md  MCP_TROUBLESHOOTING.md  README.md  RUNNING_SERVER.md  SETUP_FLOW.md  mcp-usage-examples.md  natural-language-processing-guide.md  osm-tagging-guide.md  tag-validation-and-checking.md
examples/: claude_desktop_config.json  claude_desktop_config_uv.json  cline_settings.json  cursor_config.json  cursor_config_uv.json  quick_start.py  web_api_client.py
scripts/: health_check.py  install_with_uv.sh  security_audit.py  server_manager.sh  update_osm_tags.py
src/osm_edit_mcp/: __init__.py  osm_tags.py  server.py
tests/: __init__.py  test_config.py  test_xml_parser.py
