[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osm-edit-mcp"
version = "0.1.0"
description = "Model Context Protocol server for editing OpenStreetMap data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "pk", email = "right.crew7885@fastmail.com"}
]
keywords = ["openstreetmap", "osm", "mcp", "model-context-protocol", "ai", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "authlib>=1.2.0",
    "keyring>=24.0.0",
    "anyio>=3.0.0",
    "structlog>=23.0.0",
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.12.13",
]

[project.urls]
Homepage = "https://github.com/skywinder/osm-edit-mcp"
Repository = "https://github.com/skywinder/osm-edit-mcp"
Issues = "https://github.com/skywinder/osm-edit-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
osm-edit-mcp = "osm_edit_mcp.server:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/osm_edit_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/osm_edit_mcp"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
